--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,13 @@
         ],
         "react/react-in-jsx-scope": "off",
         "react/prop-types": "off",
-        "react/jsx-props-no-spreading": "off"
+        "react/jsx-props-no-spreading": "off",
+        "no-restricted-exports": "off",
+        "react/function-component-definition": "off",
+        "import/no-extraneous-dependencies": "off",
+        "react/no-array-index-key": "off",
+        "no-unused-vars": "off",
+        "import/prefer-default-export": "off",
+        "react/forbid-prop-types": "off"
     }
 }
