--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "eslint-plugin-react": "^7.28.0",
     "next": "13.2.3",
     "postcss": "^8.4.21",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
