--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
         "react/no-array-index-key": "off",
         "no-unused-vars": "off",
         "import/prefer-default-export": "off",
-        "react/forbid-prop-types": "off"
+        "react/forbid-prop-types": "off",
+        "camelcase": "off"
     }
 }
