--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         "no-unused-vars": "off",
         "import/prefer-default-export": "off",
         "react/forbid-prop-types": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "jsx-a11y/control-has-associated-label": "off"
     }
 }
