--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
         "import/prefer-default-export": "off",
         "react/forbid-prop-types": "off",
         "camelcase": "off",
-        "jsx-a11y/control-has-associated-label": "off"
+        "jsx-a11y/control-has-associated-label": "off",
+        "no-nested-ternary": "off"
     }
 }
